<resources>
    <string name="app_name">Save Time</string>

    <string name="logout">Logout</string>
    <string name="pause_service">Pause Save Time</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Save Time Settings</string>
    <string name="tab_text_1">General</string>
    <string name="tab_text_2">Recommendation</string>
    <string name="title_activity_SMARTsettings">Save Time Settings</string>
    <string name="picture_frequency">Selfie Frequency: </string>
    <string name="once_a_day">Once a day</string>
    <string name="manual">Manual</string>
    <string name="twice_a_day">Twice a day</string>
    <string name="n_times_a_day">times a day</string>
    <string name="app_blocking">App Blocking</string>
    <string name="allow_app_block">Block apps after time limit</string>
    <string name="allow_block_bypass">Allow block bypass</string>
    <string name="emotion_recognition">Emotion recognition</string>
    <string name="allow_take_picture">Capture selfies</string>
    <string name="channel_name">App usage</string>
    <string name="channel_description">Displays a summary of your app usage today</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permissions_fragment">Welcome to Save Time, an application to help you monitor and increase your productivity! To use Save Time, you need to enable app usage statistics for the Save Time app to track your time on specific applications.</string>
    <string name="user_password"></string>
    <string name="user_confirm_password"></string>

    <string name="time_in_restricted_apps">%s in restricted apps</string>
    <string name="limit_exceeded">Usage limit exceeded in %d apps</string>

    <string name="zero_min">"&lt;1 min"</string>
    <string name="duration_min">%d min</string>
    <string name="duration_hour">%d:%02d hr</string>
    <string name="total">total</string>
    <string name="n_more_apps">, and %d more apps</string>
    <string name="duration_in_category">in %s</string>
    <string name="log_my_mood">Take a selfie!</string>
    <string name="mood">Feeling</string>
    <string name="others">Others</string>
    <string name="restricted_apps">Restrictions and recommendations</string>
    <string name="rec_restrictions">Recommended restrictions</string>
    <string name="other_apps">Other apps</string>
    <string name="swipe_down_for_more_options">Swipe down for more options</string>
    <string name="usage_limit_reached">Usage limit reached: %s</string>
    <string name="your_newsfeed">Your newsfeed</string>
    <string name="suggested_activities">Suggested activities</string>
    <string name="more_details">MORE DETAILS</string>
    <string name="source_newsapi_org">Source: NewsAPI.org</string>
    <string name="override_message">You indicated that you do not want to use %s more than %s per day. What do you want to do?</string>
    <string name="continue_to_app">Continue to app</string>
    <string name="go_home">Go home</string>
    <string name="set_restriction_title">Restrict %s everyday after</string>
    <string name="take_photo">Take photo</string>
    <string name="enter_manually">Enter manually</string>
    <string name="emotion_level_5">😀</string>
    <string name="emotion_level_4">😊</string>
    <string name="emotion_level_3">😐</string>
    <string name="emotion_level_2">😕</string>
    <string name="emotion_level_1">☹️</string>
    <string name="restricted_val">Restricted: %s</string>
    <string name="recommended_val">Recommended: %s</string>
    <string name="resume_service">Resume Save Time</string>
    <string name="app_blocking_disabled">App blocking is disabled</string>
    <string name="unknown">Unknown</string>
    <string name="app_monitoring">App Monitoring</string>
    <string name="app_overlay">App Overlay</string>
    <string name="camera">Camera</string>
    <string name="external_storage">External Storage</string>
    <string name="onboarding_restrictions">Select apps which are in your Entertainment Category. This is used for giving recommendations.</string>
    <string name="create_account">Create a new Save Time Account</string>
    <string name="select_activities">Select productive activities you would like to incorporate into your schedule:</string>
    <string name="view_intro">View intro</string>
    <string name="viewmore">viewmore</string>
    <string name="todays_usage">Today\'s Usage</string>
    <string name="your_entertainment_time">Your Entertainment Time</string>
    <string name="entertainment_note">Your tommorroews entertainment time will depend on today usage do use your phone wisely and get more entertainemnt time!</string>
    <string name="tommorow_enter_note">Watch out your tommorrow Entertainment time</string>

</resources>
