<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PermissionsFragment"
    android:background="@color/Onboarding1">

    <ImageView
        android:src="@mipmap/ic_launcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <TextView
        style="@style/OnboardingTextViewStyle"
        android:text="@string/permissions_fragment"
        android:layout_marginBottom="20dp" />
    <LinearLayout
        android:id="@+id/usageEnableButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:text="@string/app_monitoring"
            />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            />


    </LinearLayout>

    <LinearLayout

        android:id="@+id/overlayEnableButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:text="@string/app_overlay"
            />
<!--        <TextView-->
<!--            style="@style/OnboardingPermissionTextStyle"-->
<!--            android:id="@+id/overlayEnabledText" />-->

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            />

    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:visibility="gone">-->

<!--        <Button-->
<!--            android:id="@+id/cameraEnableButton"-->
<!--            style="@style/OnboardingPermissionButtonStyle"-->
<!--            android:text="@string/camera"/>-->
<!--        <TextView-->
<!--            android:id="@+id/cameraEnabledText"-->
<!--            style="@style/OnboardingPermissionTextStyle" />-->

<!--    </LinearLayout>-->

    <LinearLayout
        android:id="@+id/externalStorageEnableButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:text="@string/external_storage"
            />
<!--        <TextView-->
<!--            android:id="@+id/externalStorageEnabledText"-->
<!--            style="@style/OnboardingPermissionTextStyle" />-->

        <Switch
            android:id="@+id/switch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:clickable="false"
            />

    </LinearLayout>

</LinearLayout>