<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    style="@style/AppTheme">

    <LinearLayout
        android:id="@+id/enter_block_overlay"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#000000"
        android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="You exceeded todays Entertainment Time"
            android:textSize="28sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            />
        <ImageView
            android:id="@+id/enter_app_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_done_white"
            />
        <TextView
            android:id="@+id/enter_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:text="Clash Of Clans"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/entertainment_bg"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entertainment_note"
                android:textSize="20dp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                />
        </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textAlignment="center"
                android:text="@string/tommorow_enter_note"/>

        <TextView
            android:id="@+id/tommorow_enter_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1hr/ 20min"
            android:textSize="50dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/green"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Note: If you want to use the app then change the Your Save Time app Running to Paused"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/border_bg"
            android:padding="15dp"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/overlay_page_1"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:background="#000000"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_margin="@dimen/overlay_margin"
            android:layout_marginTop="30dp">
            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="32dp"
                android:layout_height="32dp" />
            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="14dp"/>

        </LinearLayout>
        <TextView
            android:id="@+id/usage_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="@dimen/overlay_margin"
            android:layout_marginEnd="@dimen/overlay_margin"/>
        <TextView
            android:id="@+id/more_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/more_details"
            android:textAllCaps="true"
            android:textColor="@color/colorAccentLight"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="@dimen/overlay_margin"
            android:layout_marginEnd="@dimen/overlay_margin"
            android:background="?android:attr/selectableItemBackground"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
                    <TextView
            android:id="@+id/activity_suggestions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggested_activities"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="@dimen/overlay_margin"
            android:layout_marginEnd="@dimen/overlay_margin"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/activity_suggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="@dimen/overlay_margin"
            android:layout_marginEnd="@dimen/overlay_margin"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:background="@drawable/rounded_rect_bg"/>

        <TextView
            android:id="@+id/news_feed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_newsfeed"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="@dimen/overlay_margin"
            android:layout_marginEnd="@dimen/overlay_margin"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>
        <!-- Will add views dynamically -->
        <LinearLayout
            android:id="@+id/news_feed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/overlay_margin"
            android:layout_marginEnd="@dimen/overlay_margin"
            android:background="@drawable/rounded_rect_bg_top"/>
        <TextView
            android:text="@string/source_newsapi_org"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginBottom="12dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:layout_marginStart="@dimen/overlay_margin"
            android:layout_marginEnd="@dimen/overlay_margin"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:textStyle="italic"
            android:background="@drawable/rounded_rect_bg_bottom"
            android:textSize="11sp"/>
    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_down_for_more_options"
            android:drawableBottom="@drawable/ic_arrow_down"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginStart="@dimen/overlay_margin"
            android:layout_marginEnd="@dimen/overlay_margin"
            android:textColor="@android:color/white"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/overlay_page_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#000000"
        android:padding="@dimen/overlay_margin">
        <TextView
            android:id="@+id/override_block_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="28dp"/>
        <LinearLayout
            android:id="@+id/overlay_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/continue_to_app"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@android:style/Widget.Material.Button.Inset"
                android:text="@string/continue_to_app"/>
            <Button
                android:id="@+id/go_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/go_home"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>